# kaiproc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
kpg/: perlin.cpp
kpg/include/gui/: camera.hpp  color.hpp  component.hpp  display.hpp  framebuffer.hpp  gui.hpp  input.hpp
kpg/include/procgen/: debugwin.hpp  fbm.hpp  noisemap.hpp  perlin.hpp
kpg/include/utils/: logger.hpp
kpg/src/: main.cpp
kpg/src/gui/: camera.cpp  display.cpp  gui.cpp  input.cpp
kpg/src/procgen/: debugwin.cpp  fbm.cpp  noisemap.cpp  perlin.cpp
kpg/src/utils/: logger.cpp
